--- a/generators/app/templates/unit_test/dunitx/DUnitXAppTests.dproj
+++ b/generators/app/templates/unit_test/dunitx/DUnitXAppTests.dproj
@@ -3,7 +3,7 @@
         <ProjectGuid>{E56C5C4C-9262-4817-9B57-4947ADFAE08C}</ProjectGuid>
         <ProjectVersion>18.3</ProjectVersion>
         <FrameworkType>None</FrameworkType>
-        <MainSource>DUnitXAppTests.dpr</MainSource>
+        <MainSource><%= name %>Tests.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
@@ -48,7 +48,7 @@
         <Icon_MainIcon>$(BDS)\bin\delphi_PROJECTICON.ico</Icon_MainIcon>
         <Icns_MainIcns>$(BDS)\bin\delphi_PROJECTICNS.icns</Icns_MainIcns>
         <DCC_UnitSearchPath>$(DUnitX);$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
-        <SanitizedProjectName>DUnitXAppTests</SanitizedProjectName>
+        <SanitizedProjectName><%= name %>Tests</SanitizedProjectName>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_UsePackage>rtl;fmxase;ObjectDebugger;vcl;CustomIPTransport;vclactnband;vcldsnap;IndyCore;IndySystem;vclx;bindcomp;tethering;svnui;appanalytics;dsnap;bindcompvcl;vclimg;vcltouch;VclSmp;vcldb;bindcompfmx;svn;vclie;bindengine;dbrtl;IndyProtocols;JamesExpertTokyo;fmx;fmxdae;xmlrtl;fmxobj;vclwinx;$(DCC_UsePackage)</DCC_UsePackage>
@@ -77,7 +77,7 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="NewTestFixture.pas"/>
+        <%- dccReferenceFixture %>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -96,7 +96,7 @@
         <BorlandProject>
             <Delphi.Personality>
                 <Source>
-                    <Source Name="MainSource">DUnitXAppTests.dpr</Source>
+                    <Source Name="MainSource"><%= name %>Tests.dpr</Source>
                 </Source>
             </Delphi.Personality>
             <Platforms>
