--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "bugs": {
     "url": "https://github.com/alefragnani/delphi-generator-delphi/issues"
   },
+  "license": "MIT",
   "files": [
     "generators"
   ],
@@ -29,28 +30,14 @@
     "yosay": "^1.2.1"
   },
   "devDependencies": {
+    "mocha": "^3.1.2",
+    "@types/node": "^6.0.41",
+    "@types/mocha": "^2.2.0",
     "yeoman-test": "^1.6.0",
-    "yeoman-assert": "^2.2.1",
-    "eslint": "^3.1.1",
-    "eslint-config-xo-space": "^0.15.0",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^3.0.1",
-    "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-istanbul": "^1.0.0",
-    "gulp-mocha": "^3.0.1",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0"
-  },
-  "eslintConfig": {
-    "extends": "xo-space",
-    "env": {
-      "mocha": true
-    }
+    "yeoman-assert": "^2.2.1"
   },
   "scripts": {
-    "prepublish": "gulp prepublish",
-    "test": "gulp"
-  },
-  "license": "MIT"
+    "prepublishOnly": "npm test",
+    "test": "mocha"
+  }
 }
