--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@types/node": "^6.0.41",
     "@types/mocha": "^2.2.0",
     "yeoman-test": "^1.6.0",
-    "yeoman-assert": "^2.2.1"
+    "yeoman-assert": "^2.2.1",
+    "xml2js": "^0.4.19"
   },
   "scripts": {
     "prepublishOnly": "npm test",
