--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
+
 node_js:
-  - v7
-  - v6
-  - v5
-  - v4
-  - '0.12'
+  - "6.6.0"
+  - "4.5"
+
+install:
+  - npm install
+
+script:
+  - npm test --silent
