--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "yeoman-generator": "^1.0.0",
     "chalk": "^1.1.3",
-    "yosay": "^1.2.1"
+    "yosay": "^1.2.1",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "mocha": "^3.1.2",
